# hwpx_chunker

./: .gitignore  LICENSE  README.md  USAGE.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
regchunker/: __init__.py  config.py  hwpx_reader.py  normalize.py  outline_parser.py  parser.py  patterns.py  router.py
tools/: ocr_compare.py
